k8s/overlays/stg/frontend-pull-always.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Always
