k8s/overlays/stg/nodeport-services.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-monitor
spec:
  type: NodePort
  ports:
    - name: http
      port: 8765
      targetPort: http
      nodePort: 30765
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30780
